# trae-agent

trae-agent-rust/: Cargo.toml  README.md
trae-agent-rust/src/: cli.rs  config.rs  main.rs
trae-agent-rust/src/agent/: base_agent.rs  mod.rs  trae_agent_rs.rs
trae-agent-rust/src/llm/: anthropic_client.rs  base_client.rs  mod.rs  openai_client.rs
trae-agent-rust/src/tools/: base.rs  bash_tool.rs  edit_tool.rs  mod.rs  sequential_thinking_tool.rs
trae-agent-rust/src/utils/: lakeview.rs  mod.rs
trae_agent_rs/: Cargo.toml  Full_Changelog-2025-07-10.md  Full_Changelog-2025-07-11.md  README.md
trae_agent_rs/src/: cli.rs  config.rs  main.rs
trae_agent_rs/src/agent/: base_agent.rs  trae_agent_rs.rs
trae_agent_rs/src/llm/: anthropic_client.rs  base_client.rs  openai_client.rs
trae_agent_rs/src/tools/: base.rs  bash_tool.rs  edit_tool.rs  json_edit_tool.rs  mod.rs  task_done_tool.rs
trae_agent_rs/src/utils/: git_utils.rs  lakeview.rs  mod.rs  trajectory_recorder.rs
