[package]
name = "trae_rust_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] } # Using 0.12 as it's the new default in Rust ecosystem
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "^13.0.0"
jsonpath_lib = "0.3.0" # Corrected version for JSONEditTool

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
